docs/apache-airflow-providers-cncf-kubernetes/2.1.0/_sources/_api/airflow/providers/cncf/kubernetes/utils/xcom_sidecar/index.rst.txt
:mod:`airflow.providers.cncf.kubernetes.utils.xcom_sidecar`
===========================================================

.. py:module:: airflow.providers.cncf.kubernetes.utils.xcom_sidecar

.. autoapi-nested-parse::

   This module handles all xcom functionality for the KubernetesPodOperator
   by attaching a sidecar container that blocks the pod from completing until
   Airflow has pulled result data into the worker for xcom serialization.



Module Contents
---------------

.. py:class:: PodDefaults

   Static defaults for Pods

   .. attribute:: XCOM_MOUNT_PATH
      :annotation: = /airflow/xcom

      

   .. attribute:: SIDECAR_CONTAINER_NAME
      :annotation: = airflow-xcom-sidecar

      

   .. attribute:: XCOM_CMD
      :annotation: = trap "exit 0" INT; while true; do sleep 1; done;

      

   .. attribute:: VOLUME_MOUNT
      

      

   .. attribute:: VOLUME
      

      

   .. attribute:: SIDECAR_CONTAINER
      

      


.. function:: add_xcom_sidecar(pod: k8s.V1Pod) -> k8s.V1Pod
   Adds sidecar


